# Bio-Inspired-Drone-Formation-Starling-Murmuration

./: .gitignore  BT19_Bio_Inspired_Swarm_Drones.md  CHANGELOG.md  CONTRIBUTING.md  README.md  conftest.py  pyproject.toml  test_p39_real_data.py
.github/workflows/: ci.yml
docs/: THEORY.md
drone_swarm/: __init__.py  model.py
experiments/: bt19_swarm_drones.py  p39_real_data.py
figures_p39/: bt19_swarm_drones_results.json  p39_fractal_stress_results.json
hrv_analysis/: __init__.py  dfa.py  mfdfa.py
tests/: test_drone_swarm.py  test_hrv_analysis.py
