[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bio-inspired-drones-hrv"
version = "0.1.0"
description = "Bio-inspired swarm drone murmuration kinematics and multifractal HRV stress analysis"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Runtime-Slayers", url = "https://github.com/Runtime-Slayers" }
]
keywords = [
  "starling murmuration",
  "drone swarm",
  "boids model",
  "cognitive load balancing",
  "detrended fluctuation analysis",
  "hrv stress",
  "multifractal analysis",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.21",
  "scipy>=1.7",
  "matplotlib>=3.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/Runtime-Slayers/Bio-Inspired-Drone-Formation-Starling-Murmuration"
Repository = "https://github.com/Runtime-Slayers/Bio-Inspired-Drone-Formation-Starling-Murmuration"

[project.scripts]
swarm-validate = "experiments.bt19_swarm_drones:main"
hrv-validate = "experiments.p39_real_data:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["drone_swarm*", "hrv_analysis*", "experiments*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers --strict-config"
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:numpy",
  "ignore::PendingDeprecationWarning:numpy",
  "ignore::RuntimeWarning:numpy",
]

[tool.ruff]
line-length = 95
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
